Level-10: Add GUI features