@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'checkstyle'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 checkstyle {
@@ -14,15 +15,26 @@ repositories {
 }
 
 dependencies {
+    String javaFxVersion = '17.0.7'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
-    // JavaFX modules
-    implementation 'org.openjfx:javafx-controls:17.0.7:win'
-    implementation 'org.openjfx:javafx-fxml:17.0.7:win'
-    implementation 'org.openjfx:javafx-graphics:17.0.7:win'
-    implementation 'org.openjfx:javafx-base:17.0.7:win'
-    implementation 'org.openjfx:javafx-media:17.0.7:win'
-    implementation 'org.openjfx:javafx-web:17.0.7:win'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
+}
+
+javafx {
+    version = "17.0.7"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 test {
@@ -48,13 +60,6 @@ shadowJar {
     archiveClassifier = null
 }
 
-tasks.withType(JavaExec) {
-    // Make sure JavaFX modules are added
-    jvmArgs = [
-        '--module-path', 'C:/Users/Ka Wai Cheng/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.7/win/...', // optional, Gradle may handle automatically
-        '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
-}
 
 run{
     standardInput = System.in
